--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 h1{
     text-align:center;
+    padding:0.5rem;
 }
 h6{
     text-align: right;
@@ -14,7 +15,7 @@ h6{
 }
 
 body,main{
-     background: #ee3737;
+background: #e6ffe6;
     height:100vh;
     width:100vw;
 }
@@ -24,7 +25,7 @@ body,main{
 }
 #content{
     height:100vh;
- background: #ee3737;
+background: linear-gradient(135deg, #e0eafc 0%, #cfdef3 100%);
     overflow-y: auto;
 }
 #content>div{
@@ -78,9 +79,12 @@ section>button{
     background: transparent;
     color:whitesmoke;
     border:none;
+    transition:box-shadow 0.6s;
+}
+section>button:hover{
+    box-shadow:0 5px 16px whitesmoke;
 }
 .infoDiv{
-    
     font-size: 1.5rem;
     padding:1.5rem;
     text-align:center;
@@ -90,5 +94,15 @@ section>button{
     background: #d6d4d4;
     height:45vh;
     width:75vw;
-    
+}
+.infoDiv>p{
+    margin-top:1rem;
+    margin-right:1rem;
+    padding:0.5rem 1rem;
+    margin-bottom:1rem; 
+}
+.infoDiv>ul{
+    margin-bottom:0.5rem;
+    text-align: inherit;
+    list-style-type: none;
 }
